<resources>
    <string name="app_name">Chinese Poker</string>
    <string name="set">Set</string>
    <string name="back">back</string>
    <string name="Player2">Player 2 : </string>
    <string name="Player3">Player 3 : </string>
    <string name="Player4">Player 4 : </string>
    <string name="Player1">Player 1 : </string>
    <string name="score">Score</string>
    <string name="total">Total</string>
</resources>